--- a/static/app.css
+++ b/static/app.css
@@ -70,3 +70,50 @@ textarea:focus {
 br {
     display: none; 
 }
+.upload-btn {
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.upload-btn:hover {
+    background-color: #cc0000;
+}
+#imagePreview {
+    margin-top: 20px;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+#imagePreview img {
+    max-width: 150px;
+    height: 150px;
+    border-radius: 5px;  
+    object-fit: cover;  
+    border: 2px solid #ddd;
+    margin: 5px;
+}
+.delete-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    padding: 5px;
+    cursor: pointer;
+}
+.image-container {
+    position: relative;
+    display: inline-block;
+}
+#imageName {
+    margin-top: 10px;
+    font-size: 16px;
+    color: #333;
+    text-align: center;
+}
