--- a/templates/app.html
+++ b/templates/app.html
@@ -57,7 +57,12 @@
                     <label for="description" class="placeholder">Video Description</label>
                 </div>
                 
-        
+                <label for="privacyStatus">Privacy Status:</label>
+                <select name="privacyStatus" id="privacyStatus">
+                    <option value="public">Public</option>
+                    <option value="private">Private</option>
+                    <option value="unlisted">Unlisted</option>
+                </select>
             
 
                 <div class="steps">
