--- a/templates/app.html
+++ b/templates/app.html
@@ -54,15 +54,44 @@
                     <div class="cut cut-short1"></div>
                     <label for="description" class="placeholder">Video Description</label>
                 </div>
-                
-                <label for="privacyStatus">Privacy Status:</label>
-                <select name="privacyStatus" id="privacyStatus">
-                    <option value="public">Public</option>
-                    <option value="private">Private</option>
-                    <option value="unlisted">Unlisted</option>
+                <br><br>
+                <label for="privacyStatus">Select Privacy Status:</label>
+                <select name="privacyStatus" id="privacyStatus" required  class="m">
+                  <option value="" disabled selected>-- Select an option --</option>
+                  <option value="public">Public</option>
+                  <option value="private">Private</option>
+                  <option value="unlisted">Unlisted</option>
                 </select>
             
+<style>
+        label {
+      font-weight: bold;
+      font-size: 1rem;
+      display: block;
+      margin-bottom: 10px;
+      color: #555;
+    }
 
+    select {
+      width: 70%;
+      padding: 10px;
+      font-size: 1rem;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      background-color: #fefefe;
+      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+      color: #333;
+      cursor: pointer;
+      margin-bottom: 20px;
+      transition: border 0.3s;
+    }
+
+    select:focus {
+      outline: none;
+      border-color: #007bff;
+      box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    }
+</style>
                 <div class="steps">
                     <div class="step">
                         <h2>1. Upload an Image</h2>
